# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> +x86/nb-busybox.cf:
  Added nb-busybox.cf to x86 on the request of Andrew Gaffney
  <agaffney@gentoo.org>.

  05 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh, genkernel:
  Added a change to force objdump output to be English for bug #173412 and
  rolling 3.4.7 final for the release.

  05 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Added a patch from Daniel Drake <dsd@gentoo.org> to fix splash problems for
  bug #172562.

  03 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.conf:
  Some minor config file cleanup.

  03 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  genkernel.8:
  Added a second patch from John R. Graham <john_r_graham@mindspring.com> from
  bug #169383.

  27 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, x86/modules_load, x86_64/modules_load,
  xen0/modules_load, xenU/modules_load:
  Added raid456 to dmraid target for bug #172128.

  26 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh:
  Changed LVM configuration detection to not error.

  26 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> x86/kernel-config-2.6:
  Added joystick support to the default configuration for bug #171911.

  14 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh, genkernel:
  Before we copy lvm.conf, we run it through 'lvm dumpconfig' to make sure the
  config is valid for bug #156009. This is 3.4.7_pre5.

  14 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.conf:
  Change the default CACHE_DIR from /usr/share/genkernel/pkg/%%ARCH%% to
  /var/cache/genkernel/%%ARCH%% for bug #148253.

  13 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,