@@ -208,7 +208,7 @@ append_lvm2(){
 	cd ${TEMP}
 	mkdir -p "${TEMP}/initramfs-lvm2-temp/bin/"
 	mkdir -p "${TEMP}/initramfs-lvm2-temp/etc/lvm/"
-	if [ -e '/sbin/lvm' ] && ldd /sbin/lvm|grep -q 'not a dynamic executable'
+	if [ -e '/sbin/lvm' ] && LC_ALL="C" ldd /sbin/lvm|grep -q 'not a dynamic executable'
 	then
 		print_info 1 '		LVM2: Adding support (using local static binaries)...'
 		cp /sbin/lvm "${TEMP}/initramfs-lvm2-temp/bin/lvm" ||
@@ -223,15 +223,15 @@ append_lvm2(){
 	fi
 	if [ -x /sbin/lvm ]
 	then
-		lvm dumpconfig 2>&1 > /dev/null || gen_die 'Could not copy over lvm.conf!'
-		ret=$?
-		if [ ${ret} != 0 ]
-		then
+#		lvm dumpconfig 2>&1 > /dev/null || gen_die 'Could not copy over lvm.conf!'
+#		ret=$?
+#		if [ ${ret} != 0 ]
+#		then
 			cp /etc/lvm/lvm.conf "${TEMP}/initramfs-lvm2-temp/etc/lvm/" ||
 				gen_die 'Could not copy over lvm.conf!'
-		else
-			gen_die 'Could not copy over lvm.conf!'
-		fi
+#		else
+#			gen_die 'Could not copy over lvm.conf!'
+#		fi
 	fi
 	cd "${TEMP}/initramfs-lvm2-temp/"
 	find . -print | cpio ${CPIO_ARGS} --append -F "${CPIO}"
