@@ -168,7 +168,7 @@ create_base_initrd_sys() {
 	# LVM2
 	if [ "${LVM2}" = '1' ]
 	then
-		if [ -e '/sbin/lvm' ] && ldd /sbin/lvm|grep -q 'not a dynamic executable';
+		if [ -e '/sbin/lvm' ] && LC_ALL="C" ldd /sbin/lvm|grep -q 'not a dynamic executable';
 		then
 			print_info 1 'LVM2: Adding support (using local static binaries)...'
 			cp /sbin/lvm "${TEMP}/initrd-temp/bin/lvm" ||
@@ -189,15 +189,15 @@ create_base_initrd_sys() {
 		mkdir -p ${TEMP}/initrd-temp/etc/lvm
 		if [ -x /sbin/lvm ]
 		then
-			lvm dumpconfig 2>&1 > /dev/null || gen_die 'Could not copy over lvm.conf!'
-			ret=$?
-			if [ ${ret} != 0 ]
-			then
+#			lvm dumpconfig 2>&1 > /dev/null || gen_die 'Could not copy over lvm.conf!'
+#			ret=$?
+#			if [ ${ret} != 0 ]
+#			then
 				cp /etc/lvm/lvm.conf "${TEMP}/initramfs-lvm2-temp/etc/lvm/" ||
 					gen_die 'Could not copy over lvm.conf!'
-			else
-				gen_die 'Could not copy over lvm.conf!'
-			fi
+#			else
+#				gen_die 'Could not copy over lvm.conf!'
+#			fi
 		fi
 	fi
 	
